// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Raw @cubejs-backend/postgres-driver must select from the data source 1`] = `
Array [
  Array [
    Object {
      "category": "Furniture",
      "product_name": "Anderson Hickey Conga Table Tops & Accessories",
      "sub_category": "Tables",
    },
    Object {
      "category": "Furniture",
      "product_name": "Balt Solid Wood Rectangular Table",
      "sub_category": "Tables",
    },
    Object {
      "category": "Furniture",
      "product_name": "DMI Eclipse Executive Suite Bookcases",
      "sub_category": "Bookcases",
    },
    Object {
      "category": "Furniture",
      "product_name": "Global Adaptabilites Bookcase, Cherry/Storm Gray Finish",
      "sub_category": "Bookcases",
    },
    Object {
      "category": "Furniture",
      "product_name": "Harbour Creations 67200 Series Stacking Chairs",
      "sub_category": "Chairs",
    },
    Object {
      "category": "Furniture",
      "product_name": "Iceberg Nesting Folding Chair, 19w x 6d x 43h",
      "sub_category": "Chairs",
    },
    Object {
      "category": "Furniture",
      "product_name": "Linden 10 Round Wall Clock, Black",
      "sub_category": "Furnishings",
    },
    Object {
      "category": "Furniture",
      "product_name": "Magna Visual Magnetic Picture Hangers",
      "sub_category": "Furnishings",
    },
    Object {
      "category": "Office Supplies",
      "product_name": "OIC #2 Pencils, Medium Soft",
      "sub_category": "Art",
    },
    Object {
      "category": "Office Supplies",
      "product_name": "Panasonic KP-380BK Classic Electric Pencil Sharpener",
      "sub_category": "Art",
    },
    Object {
      "category": "Office Supplies",
      "product_name": "Project Tote Personal File",
      "sub_category": "Storage",
    },
    Object {
      "category": "Office Supplies",
      "product_name": "Recycled Eldon Regeneration Jumbo File",
      "sub_category": "Storage",
    },
    Object {
      "category": "Office Supplies",
      "product_name": "Tyvek Side-Opening Peel & Seel Expanding Envelopes",
      "sub_category": "Envelopes",
    },
    Object {
      "category": "Office Supplies",
      "product_name": "Wausau Papers Astrobrights Colored Envelopes",
      "sub_category": "Envelopes",
    },
    Object {
      "category": "Office Supplies",
      "product_name": "Vinyl Coated Wire Paper Clips in Organizer Box, 800/Box",
      "sub_category": "Fasteners",
    },
    Object {
      "category": "Office Supplies",
      "product_name": "Plymouth Boxed Rubber Bands by Plymouth",
      "sub_category": "Fasteners",
    },
    Object {
      "category": "Technology",
      "product_name": "Logitech diNovo Edge Keyboard",
      "sub_category": "Accessories",
    },
    Object {
      "category": "Technology",
      "product_name": "Kingston Digital DataTraveler 16GB USB 2.0",
      "sub_category": "Accessories",
    },
    Object {
      "category": "Technology",
      "product_name": "Kingston Digital DataTraveler 16GB USB 2.1",
      "sub_category": "Accessories",
    },
    Object {
      "category": "Technology",
      "product_name": "Kingston Digital DataTraveler 16GB USB 2.2",
      "sub_category": "Accessories",
    },
    Object {
      "category": "Technology",
      "product_name": "Google Nexus 5",
      "sub_category": "Phones",
    },
    Object {
      "category": "Technology",
      "product_name": "Google Nexus 6",
      "sub_category": "Phones",
    },
    Object {
      "category": "Technology",
      "product_name": "Google Nexus 7",
      "sub_category": "Phones",
    },
    Object {
      "category": "Technology",
      "product_name": "HTC One",
      "sub_category": "Phones",
    },
    Object {
      "category": "Technology",
      "product_name": "Canon PC1080F Personal Copier",
      "sub_category": "Copiers",
    },
    Object {
      "category": "Technology",
      "product_name": "Hewlett Packard 610 Color Digital Copier / Printer",
      "sub_category": "Copiers",
    },
    Object {
      "category": "Technology",
      "product_name": "Lexmark 20R1285 X6650 Wireless All-in-One Printer",
      "sub_category": "Machines",
    },
    Object {
      "category": "Technology",
      "product_name": "Okidata C610n Printer",
      "sub_category": "Machines",
    },
  ],
  Array [
    Object {
      "customer_id": "AH-10465",
      "customer_name": "Customer 1",
    },
    Object {
      "customer_id": "AJ-10780",
      "customer_name": "Customer 2",
    },
    Object {
      "customer_id": "AS-10225",
      "customer_name": "Customer 3",
    },
    Object {
      "customer_id": "AW-10840",
      "customer_name": "Customer 4",
    },
    Object {
      "customer_id": "BB-11545",
      "customer_name": "Customer 5",
    },
    Object {
      "customer_id": "BF-11020",
      "customer_name": "Customer 6",
    },
    Object {
      "customer_id": "BF-11170",
      "customer_name": "Customer 7",
    },
    Object {
      "customer_id": "BM-11650",
      "customer_name": "Customer 8",
    },
    Object {
      "customer_id": "BS-11380",
      "customer_name": "Customer 9",
    },
    Object {
      "customer_id": "BS-11755",
      "customer_name": "Customer 10",
    },
    Object {
      "customer_id": "CA-12775",
      "customer_name": "Customer 11",
    },
    Object {
      "customer_id": "CC-12475",
      "customer_name": "Customer 12",
    },
    Object {
      "customer_id": "CD-12280",
      "customer_name": "Customer 13",
    },
    Object {
      "customer_id": "CS-12355",
      "customer_name": "Customer 14",
    },
    Object {
      "customer_id": "DB-13405",
      "customer_name": "Customer 15",
    },
    Object {
      "customer_id": "DG-13300",
      "customer_name": "Customer 16",
    },
    Object {
      "customer_id": "DW-13480",
      "customer_name": "Customer 17",
    },
    Object {
      "customer_id": "EM-14140",
      "customer_name": "Customer 18",
    },
    Object {
      "customer_id": "GA-14725",
      "customer_name": "Customer 19",
    },
    Object {
      "customer_id": "GZ-14470",
      "customer_name": "Customer 20",
    },
    Object {
      "customer_id": "HH-15010",
      "customer_name": "Customer 21",
    },
    Object {
      "customer_id": "HK-14890",
      "customer_name": "Customer 22",
    },
    Object {
      "customer_id": "JH-15430",
      "customer_name": "Customer 23",
    },
    Object {
      "customer_id": "JO-15550",
      "customer_name": "Customer 24",
    },
    Object {
      "customer_id": "JS-16030",
      "customer_name": "Customer 25",
    },
    Object {
      "customer_id": "JW-15220",
      "customer_name": "Customer 26",
    },
    Object {
      "customer_id": "KL-16555",
      "customer_name": "Customer 27",
    },
    Object {
      "customer_id": "KN-16705",
      "customer_name": "Customer 28",
    },
    Object {
      "customer_id": "LC-17050",
      "customer_name": "Customer 29",
    },
    Object {
      "customer_id": "LR-16915",
      "customer_name": "Customer 30",
    },
    Object {
      "customer_id": "MC-17605",
      "customer_name": "Customer 31",
    },
    Object {
      "customer_id": "MG-17650",
      "customer_name": "Customer 32",
    },
    Object {
      "customer_id": "ML-17755",
      "customer_name": "Customer 33",
    },
    Object {
      "customer_id": "MM-18280",
      "customer_name": "Customer 34",
    },
    Object {
      "customer_id": "NP-18670",
      "customer_name": "Customer 35",
    },
    Object {
      "customer_id": "PF-19165",
      "customer_name": "Customer 36",
    },
    Object {
      "customer_id": "SB-20185",
      "customer_name": "Customer 37",
    },
    Object {
      "customer_id": "SS-20140",
      "customer_name": "Customer 38",
    },
    Object {
      "customer_id": "TB-21175",
      "customer_name": "Customer 39",
    },
    Object {
      "customer_id": "TS-21205",
      "customer_name": "Customer 40",
    },
    Object {
      "customer_id": "WB-21850",
      "customer_name": "Customer 41",
    },
  ],
  Array [
    Object {
      "category": "Furniture",
      "city": "San Francisco",
      "customer_id": "HH-15010",
      "discount": "0.20000",
      "order_date": "2020-10-19T00:00:00.000",
      "order_id": "CA-2017-131492",
      "product_name": "Anderson Hickey Conga Table Tops & Accessories",
      "profit": "-3.35060",
      "quantity": 2,
      "row_id": 3060,
      "sales": "24.36800",
      "sub_category": "Tables",
    },
    Object {
      "category": "Furniture",
      "city": "Detroit",
      "customer_id": "MC-17605",
      "discount": "0.00000",
      "order_date": "2020-01-23T00:00:00.000",
      "order_id": "CA-2017-145142",
      "product_name": "Balt Solid Wood Rectangular Table",
      "profit": "21.09800",
      "quantity": 2,
      "row_id": 523,
      "sales": "210.98000",
      "sub_category": "Tables",
    },
    Object {
      "category": "Furniture",
      "city": "New York City",
      "customer_id": "SB-20185",
      "discount": "0.20000",
      "order_date": "2020-06-25T00:00:00.000",
      "order_id": "CA-2017-116127",
      "product_name": "DMI Eclipse Executive Suite Bookcases",
      "profit": "-5.00980",
      "quantity": 1,
      "row_id": 9584,
      "sales": "400.78400",
      "sub_category": "Bookcases",
    },
    Object {
      "category": "Furniture",
      "city": "Lakewood",
      "customer_id": "NP-18670",
      "discount": "0.00000",
      "order_date": "2020-10-12T00:00:00.000",
      "order_id": "CA-2017-150091",
      "product_name": "Global Adaptabilites Bookcase, Cherry/Storm Gray Finish",
      "profit": "129.29400",
      "quantity": 5,
      "row_id": 8425,
      "sales": "2154.90000",
      "sub_category": "Bookcases",
    },
    Object {
      "category": "Furniture",
      "city": "Provo",
      "customer_id": "AS-10225",
      "discount": "0.00000",
      "order_date": "2020-09-17T00:00:00.000",
      "order_id": "CA-2017-112515",
      "product_name": "Global Adaptabilites Bookcase, Cherry/Storm Gray Finish",
      "profit": "77.57640",
      "quantity": 3,
      "row_id": 2655,
      "sales": "1292.94000",
      "sub_category": "Bookcases",
    },
    Object {
      "category": "Furniture",
      "city": "Glendale",
      "customer_id": "EM-14140",
      "discount": "0.20000",
      "order_date": "2020-11-12T00:00:00.000",
      "order_id": "CA-2017-134915",
      "product_name": "Harbour Creations 67200 Series Stacking Chairs",
      "profit": "9.96520",
      "quantity": 2,
      "row_id": 2952,
      "sales": "113.88800",
      "sub_category": "Chairs",
    },
    Object {
      "category": "Furniture",
      "city": "New York City",
      "customer_id": "CD-12280",
      "discount": "0.10000",
      "order_date": "2020-11-05T00:00:00.000",
      "order_id": "CA-2017-102925",
      "product_name": "Harbour Creations 67200 Series Stacking Chairs",
      "profit": "24.20120",
      "quantity": 2,
      "row_id": 9473,
      "sales": "128.12400",
      "sub_category": "Chairs",
    },
    Object {
      "category": "Furniture",
      "city": "Detroit",
      "customer_id": "CA-12775",
      "discount": "0.00000",
      "order_date": "2020-09-01T00:00:00.000",
      "order_id": "CA-2017-145653",
      "product_name": "Harbour Creations 67200 Series Stacking Chairs",
      "profit": "134.53020",
      "quantity": 7,
      "row_id": 5220,
      "sales": "498.26000",
      "sub_category": "Chairs",
    },
    Object {
      "category": "Furniture",
      "city": "Lafayette",
      "customer_id": "CS-12355",
      "discount": "0.00000",
      "order_date": "2020-12-24T00:00:00.000",
      "order_id": "CA-2017-124296",
      "product_name": "Iceberg Nesting Folding Chair, 19w x 6d x 43h",
      "profit": "60.54880",
      "quantity": 4,
      "row_id": 4031,
      "sales": "232.88000",
      "sub_category": "Chairs",
    },
    Object {
      "category": "Furniture",
      "city": "Dallas",
      "customer_id": "LC-17050",
      "discount": "0.60000",
      "order_date": "2020-11-06T00:00:00.000",
      "order_id": "US-2017-119319",
      "product_name": "Linden 10 Round Wall Clock, Black",
      "profit": "-19.86400",
      "quantity": 5,
      "row_id": 8621,
      "sales": "30.56000",
      "sub_category": "Furnishings",
    },
    Object {
      "category": "Furniture",
      "city": "San Francisco",
      "customer_id": "HH-15010",
      "discount": "0.00000",
      "order_date": "2020-10-19T00:00:00.000",
      "order_id": "CA-2017-131492",
      "product_name": "Linden 10 Round Wall Clock, Black",
      "profit": "10.39040",
      "quantity": 2,
      "row_id": 3059,
      "sales": "30.56000",
      "sub_category": "Furnishings",
    },
    Object {
      "category": "Furniture",
      "city": "Philadelphia",
      "customer_id": "BS-11755",
      "discount": "0.20000",
      "order_date": "2020-04-10T00:00:00.000",
      "order_id": "CA-2017-135069",
      "product_name": "Linden 10 Round Wall Clock, Black",
      "profit": "6.41760",
      "quantity": 3,
      "row_id": 7425,
      "sales": "36.67200",
      "sub_category": "Furnishings",
    },
    Object {
      "category": "Furniture",
      "city": "Lorain",
      "customer_id": "GA-14725",
      "discount": "0.20000",
      "order_date": "2020-01-01T00:00:00.000",
      "order_id": "CA-2017-107503",
      "product_name": "Linden 10 Round Wall Clock, Black",
      "profit": "8.55680",
      "quantity": 4,
      "row_id": 849,
      "sales": "48.89600",
      "sub_category": "Furnishings",
    },
    Object {
      "category": "Furniture",
      "city": "Marion",
      "customer_id": "MG-17650",
      "discount": "0.20000",
      "order_date": "2020-12-01T00:00:00.000",
      "order_id": "CA-2017-145660",
      "product_name": "Magna Visual Magnetic Picture Hangers",
      "profit": "1.73520",
      "quantity": 2,
      "row_id": 6205,
      "sales": "7.71200",
      "sub_category": "Furnishings",
    },
    Object {
      "category": "Furniture",
      "city": "Vancouver",
      "customer_id": "JW-15220",
      "discount": "0.00000",
      "order_date": "2020-10-30T00:00:00.000",
      "order_id": "CA-2017-139661",
      "product_name": "Magna Visual Magnetic Picture Hangers",
      "profit": "3.66320",
      "quantity": 2,
      "row_id": 1494,
      "sales": "9.64000",
      "sub_category": "Furnishings",
    },
    Object {
      "category": "Office Supplies",
      "city": "Bakersfield",
      "customer_id": "AW-10840",
      "discount": "0.00000",
      "order_date": "2020-09-02T00:00:00.000",
      "order_id": "CA-2017-123001",
      "product_name": "OIC #2 Pencils, Medium Soft",
      "profit": "2.72600",
      "quantity": 5,
      "row_id": 3934,
      "sales": "9.40000",
      "sub_category": "Art",
    },
    Object {
      "category": "Office Supplies",
      "city": "Auburn",
      "customer_id": "KN-16705",
      "discount": "0.00000",
      "order_date": "2020-06-11T00:00:00.000",
      "order_id": "CA-2017-102554",
      "product_name": "OIC #2 Pencils, Medium Soft",
      "profit": "1.09040",
      "quantity": 2,
      "row_id": 3448,
      "sales": "3.76000",
      "sub_category": "Art",
    },
    Object {
      "category": "Office Supplies",
      "city": "Baltimore",
      "customer_id": "AJ-10780",
      "discount": "0.00000",
      "order_date": "2020-05-14T00:00:00.000",
      "order_id": "US-2017-133361",
      "product_name": "OIC #2 Pencils, Medium Soft",
      "profit": "1.09040",
      "quantity": 2,
      "row_id": 6459,
      "sales": "3.76000",
      "sub_category": "Art",
    },
    Object {
      "category": "Office Supplies",
      "city": "Oakland",
      "customer_id": "BB-11545",
      "discount": "0.00000",
      "order_date": "2020-12-02T00:00:00.000",
      "order_id": "CA-2017-102379",
      "product_name": "Panasonic KP-380BK Classic Electric Pencil Sharpener",
      "profit": "44.97500",
      "quantity": 5,
      "row_id": 6272,
      "sales": "179.90000",
      "sub_category": "Art",
    },
    Object {
      "category": "Office Supplies",
      "city": "Bowling",
      "customer_id": "BS-11380",
      "discount": "0.20000",
      "order_date": "2020-11-16T00:00:00.000",
      "order_id": "CA-2017-160633",
      "product_name": "Panasonic KP-380BK Classic Electric Pencil Sharpener",
      "profit": "5.39700",
      "quantity": 3,
      "row_id": 9619,
      "sales": "86.35200",
      "sub_category": "Art",
    },
    Object {
      "category": "Office Supplies",
      "city": "Olympia",
      "customer_id": "PF-19165",
      "discount": "0.00000",
      "order_date": "2020-06-17T00:00:00.000",
      "order_id": "CA-2017-118437",
      "product_name": "Project Tote Personal File",
      "profit": "4.06870",
      "quantity": 1,
      "row_id": 1013,
      "sales": "14.03000",
      "sub_category": "Storage",
    },
    Object {
      "category": "Office Supplies",
      "city": "Philadelphia",
      "customer_id": "CC-12475",
      "discount": "0.20000",
      "order_date": "2020-11-21T00:00:00.000",
      "order_id": "CA-2017-100811",
      "product_name": "Recycled Eldon Regeneration Jumbo File",
      "profit": "3.92960",
      "quantity": 4,
      "row_id": 4012,
      "sales": "39.29600",
      "sub_category": "Storage",
    },
    Object {
      "category": "Office Supplies",
      "city": "Columbus",
      "customer_id": "BM-11650",
      "discount": "0.00000",
      "order_date": "2020-05-13T00:00:00.000",
      "order_id": "CA-2017-149048",
      "product_name": "Tyvek Side-Opening Peel & Seel Expanding Envelopes",
      "profit": "81.43200",
      "quantity": 2,
      "row_id": 2595,
      "sales": "180.96000",
      "sub_category": "Envelopes",
    },
    Object {
      "category": "Office Supplies",
      "city": "Columbus",
      "customer_id": "KN-16705",
      "discount": "0.20000",
      "order_date": "2020-09-23T00:00:00.000",
      "order_id": "CA-2017-138422",
      "product_name": "Wausau Papers Astrobrights Colored Envelopes",
      "profit": "5.20260",
      "quantity": 3,
      "row_id": 2329,
      "sales": "14.35200",
      "sub_category": "Envelopes",
    },
    Object {
      "category": "Office Supplies",
      "city": "Columbus",
      "customer_id": "WB-21850",
      "discount": "0.00000",
      "order_date": "2020-11-11T00:00:00.000",
      "order_id": "CA-2017-120327",
      "product_name": "Vinyl Coated Wire Paper Clips in Organizer Box, 800/Box",
      "profit": "21.58240",
      "quantity": 4,
      "row_id": 4227,
      "sales": "45.92000",
      "sub_category": "Fasteners",
    },
    Object {
      "category": "Office Supplies",
      "city": "Arlington",
      "customer_id": "BF-11020",
      "discount": "0.20000",
      "order_date": "2020-09-08T00:00:00.000",
      "order_id": "US-2017-124779",
      "product_name": "Vinyl Coated Wire Paper Clips in Organizer Box, 800/Box",
      "profit": "15.49800",
      "quantity": 5,
      "row_id": 6651,
      "sales": "45.92000",
      "sub_category": "Fasteners",
    },
    Object {
      "category": "Office Supplies",
      "city": "Decatur",
      "customer_id": "JS-16030",
      "discount": "0.20000",
      "order_date": "2020-02-16T00:00:00.000",
      "order_id": "CA-2017-163265",
      "product_name": "Vinyl Coated Wire Paper Clips in Organizer Box, 800/Box",
      "profit": "6.19920",
      "quantity": 2,
      "row_id": 8673,
      "sales": "18.36800",
      "sub_category": "Fasteners",
    },
    Object {
      "category": "Office Supplies",
      "city": "Columbus",
      "customer_id": "ML-17755",
      "discount": "0.20000",
      "order_date": "2020-06-25T00:00:00.000",
      "order_id": "CA-2017-133648",
      "product_name": "Plymouth Boxed Rubber Bands by Plymouth",
      "profit": "-2.11950",
      "quantity": 3,
      "row_id": 1995,
      "sales": "11.30400",
      "sub_category": "Fasteners",
    },
    Object {
      "category": "Office Supplies",
      "city": "New York City",
      "customer_id": "MM-18280",
      "discount": "0.00000",
      "order_date": "2020-06-10T00:00:00.000",
      "order_id": "CA-2017-112172",
      "product_name": "Plymouth Boxed Rubber Bands by Plymouth",
      "profit": "0.70650",
      "quantity": 3,
      "row_id": 7310,
      "sales": "14.13000",
      "sub_category": "Fasteners",
    },
    Object {
      "category": "Office Supplies",
      "city": "Omaha",
      "customer_id": "JO-15550",
      "discount": "0.00000",
      "order_date": "2020-05-29T00:00:00.000",
      "order_id": "CA-2017-144568",
      "product_name": "Plymouth Boxed Rubber Bands by Plymouth",
      "profit": "1.17750",
      "quantity": 5,
      "row_id": 3717,
      "sales": "23.55000",
      "sub_category": "Fasteners",
    },
    Object {
      "category": "Technology",
      "city": "Columbus",
      "customer_id": "TB-21175",
      "discount": "0.00000",
      "order_date": "2020-11-02T00:00:00.000",
      "order_id": "CA-2017-143567",
      "product_name": "Logitech diNovo Edge Keyboard",
      "profit": "517.47930",
      "quantity": 9,
      "row_id": 4882,
      "sales": "2249.91000",
      "sub_category": "Accessories",
    },
    Object {
      "category": "Technology",
      "city": "Columbus",
      "customer_id": "KL-16555",
      "discount": "0.00000",
      "order_date": "2020-12-14T00:00:00.000",
      "order_id": "CA-2017-147333",
      "product_name": "Kingston Digital DataTraveler 16GB USB 2.0",
      "profit": "8.50250",
      "quantity": 5,
      "row_id": 5277,
      "sales": "44.75000",
      "sub_category": "Accessories",
    },
    Object {
      "category": "Technology",
      "city": "Los Angeles",
      "customer_id": "SS-20140",
      "discount": "0.00000",
      "order_date": "2020-06-03T00:00:00.000",
      "order_id": "CA-2017-145772",
      "product_name": "Kingston Digital DataTraveler 16GB USB 2.1",
      "profit": "8.50250",
      "quantity": 5,
      "row_id": 6125,
      "sales": "44.75000",
      "sub_category": "Accessories",
    },
    Object {
      "category": "Technology",
      "city": "New York City",
      "customer_id": "DB-13405",
      "discount": "0.00000",
      "order_date": "2020-03-17T00:00:00.000",
      "order_id": "CA-2017-140949",
      "product_name": "Kingston Digital DataTraveler 16GB USB 2.2",
      "profit": "13.60400",
      "quantity": 8,
      "row_id": 2455,
      "sales": "71.60000",
      "sub_category": "Accessories",
    },
    Object {
      "category": "Technology",
      "city": "Columbus",
      "customer_id": "DG-13300",
      "discount": "0.00000",
      "order_date": "2020-11-28T00:00:00.000",
      "order_id": "CA-2017-123372",
      "product_name": "Google Nexus 5",
      "profit": "494.97250",
      "quantity": 11,
      "row_id": 2661,
      "sales": "1979.89000",
      "sub_category": "Phones",
    },
    Object {
      "category": "Technology",
      "city": "Louisville",
      "customer_id": "DW-13480",
      "discount": "0.00000",
      "order_date": "2020-05-27T00:00:00.000",
      "order_id": "US-2017-132297",
      "product_name": "Google Nexus 6",
      "profit": "134.99250",
      "quantity": 3,
      "row_id": 3083,
      "sales": "539.97000",
      "sub_category": "Phones",
    },
    Object {
      "category": "Technology",
      "city": "New York City",
      "customer_id": "AH-10465",
      "discount": "0.00000",
      "order_date": "2020-05-14T00:00:00.000",
      "order_id": "CA-2017-115546",
      "product_name": "Google Nexus 7",
      "profit": "134.99250",
      "quantity": 3,
      "row_id": 4161,
      "sales": "539.97000",
      "sub_category": "Phones",
    },
    Object {
      "category": "Technology",
      "city": "Columbus",
      "customer_id": "TS-21205",
      "discount": "0.20000",
      "order_date": "2020-06-15T00:00:00.000",
      "order_id": "CA-2017-119284",
      "product_name": "HTC One",
      "profit": "26.99730",
      "quantity": 3,
      "row_id": 8697,
      "sales": "239.97600",
      "sub_category": "Phones",
    },
    Object {
      "category": "Technology",
      "city": "Columbus",
      "customer_id": "BF-11170",
      "discount": "0.00000",
      "order_date": "2020-12-14T00:00:00.000",
      "order_id": "CA-2017-151799",
      "product_name": "Canon PC1080F Personal Copier",
      "profit": "467.99220",
      "quantity": 2,
      "row_id": 7698,
      "sales": "1199.98000",
      "sub_category": "Copiers",
    },
    Object {
      "category": "Technology",
      "city": "Houston",
      "customer_id": "HK-14890",
      "discount": "0.20000",
      "order_date": "2020-03-26T00:00:00.000",
      "order_id": "US-2017-141677",
      "product_name": "Canon PC1080F Personal Copier",
      "profit": "569.99050",
      "quantity": 5,
      "row_id": 7174,
      "sales": "2399.96000",
      "sub_category": "Copiers",
    },
    Object {
      "category": "Technology",
      "city": "Columbus",
      "customer_id": "BS-11380",
      "discount": "0.40000",
      "order_date": "2020-11-16T00:00:00.000",
      "order_id": "CA-2017-160633",
      "product_name": "Hewlett Packard 610 Color Digital Copier / Printer",
      "profit": "74.99850",
      "quantity": 3,
      "row_id": 9618,
      "sales": "899.98200",
      "sub_category": "Copiers",
    },
    Object {
      "category": "Technology",
      "city": "Columbus",
      "customer_id": "JH-15430",
      "discount": "0.50000",
      "order_date": "2020-12-25T00:00:00.000",
      "order_id": "CA-2017-105620",
      "product_name": "Lexmark 20R1285 X6650 Wireless All-in-One Printer",
      "profit": "-7.20000",
      "quantity": 2,
      "row_id": 8958,
      "sales": "120.00000",
      "sub_category": "Machines",
    },
    Object {
      "category": "Technology",
      "city": "Morristown",
      "customer_id": "GZ-14470",
      "discount": "0.00000",
      "order_date": "2020-09-17T00:00:00.000",
      "order_id": "CA-2017-126928",
      "product_name": "Lexmark 20R1285 X6650 Wireless All-in-One Printer",
      "profit": "225.60000",
      "quantity": 4,
      "row_id": 8878,
      "sales": "480.00000",
      "sub_category": "Machines",
    },
    Object {
      "category": "Technology",
      "city": "Columbus",
      "customer_id": "LR-16915",
      "discount": "0.50000",
      "order_date": "2020-12-04T00:00:00.000",
      "order_id": "CA-2017-109183",
      "product_name": "Okidata C610n Printer",
      "profit": "-272.58000",
      "quantity": 2,
      "row_id": 7293,
      "sales": "649.00000",
      "sub_category": "Machines",
    },
  ],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the Customers.RollingExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
  ],
  Array [
    "createSchemaIfNotExists",
    "uploadTableWithIndexes",
    "createTable",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the Customers.RollingInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the ECommerce.SimpleAnalysisExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
  ],
  Array [
    "uploadTableWithIndexes",
    "createTable",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the ECommerce.SimpleAnalysisInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the ECommerce.TimeAnalysisExternal 1`] = `
Array [
  Array [
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
    "downloadQueryResults",
  ],
  Array [
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
    "uploadTableWithIndexes",
    "createTable",
  ],
]
`;

exports[`Sequence with the @cubejs-backend/postgres-driver for the ECommerce.TimeAnalysisInternal 1`] = `
Array [
  Array [
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
    "loadPreAggregationIntoTable",
  ],
  Array [],
]
`;
